# Sanjay_MK2

./: ._drone_visualization.html  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  FINAL_TEST_REPORT.md  Project_Sanjay_Mk2_macOS_Development_Roadmap.md  README.md  Roadmap.md  STATE.md  architecture_visualizer.html  docker-compose.dev.yml  docker-compose.yml  drone_simulation_viz.jsx  drone_visualization.html  drone_visualization_live.html  pyproject.toml  pytest.ini  requirements.txt  test_report_isaac_integration.txt  test_report_isaac_mcp.txt  test_report_main.txt  test_report_mcp_validation.txt  test_results.txt  test_results2.txt  test_results3.txt
IsaacMCP/: .mcp.json  create.md  pyproject.toml
IsaacMCP/config/: mcp_server.yaml
IsaacMCP/docs/: cursor_install.html  docker.md  plugin-packs.md  quick-start.md  sanjay-mk2.md
IsaacMCP/isaac_mcp/: __init__.py  __main__.py  config.py  error_patterns.py  instance_manager.py  log_parser.py  onboarding.py  plugin_host.py  server.py  tool_contract.py
IsaacMCP/isaac_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
IsaacMCP/scripts/: generate_cursor_deeplink.py  setup_isaac_mcp.ps1
IsaacMCP/tests/: test_auth.py  test_autonomous_loop.py  test_cicd.py  test_config.py  test_connections.py  test_dataset_generation.py  test_devtools.py  test_error_patterns.py  test_experiments_plugin.py  test_failure_detector.py  test_json_store.py  test_knowledge_graph.py  test_llm_fix_generator.py  test_loop_orchestrator.py  test_onboarding.py  test_plugin_host.py  test_rl_integration.py  (+9 more)
(+577 files in other folders)
